# cinemaProductionEngine

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISIONS.md  DEPLOYMENT.md  EMOTIONAL_WITHDRAWAL_VIDEO_SUMMARY.html  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  PROJECT_STATUS.md  README.md  REPOSITORY_MAP.md  ROADMAP.md  SECURITY.md  SPEC.md  TECH_STACK.md  TESTING.md  TROUBLESHOOTING.md  app.py  conftest.py  demo_write_scenes.py  fix_movie_os.py  genesis_demo.py  genesis_llm.yaml  local_llm_context.md  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run_genesis.py  run_genesis_demo.py  run_genesis_standalone.py  scanrio1.json  test_ew001_pipeline.py  test_genesis.py  (+1 more)
.ai/: api_contracts.yaml  architecture.yaml  backlog.yaml  coding_standards.yaml  decision_log.yaml  dependency_map.yaml  deployment.yaml  design_patterns.yaml  documentation_policy.yaml  domain_model.yaml  glossary.yaml  identity.yaml  known_issues.yaml  performance_policy.yaml  principles.yaml  project_memory.yaml  release_process.yaml  repository.yaml  roadmap.yaml  security_policy.yaml  technical_debt.yaml  technical_stack.yaml  testing_strategy.yaml
.aios/: AGENTS.md
.github/: copilot-instructions.md
.project-ai/: CURRENT_TASK.md  IMPLEMENTATION_SUMMARY.md  PROJECT_MEMORY.yaml  RESTART_PROMPT.md  SESSION_STATE.yaml
backend/: .env  requirements.txt
config/: __init__.py  llm_config.yaml  models.py  movie_os.yaml  ollama_client.py  production_profiles.yaml  prompts.py
docs/: PRD_v1.yaml  cinemaProductiondesignInputs01.md  cinemaProductiondesignInputs02.md  cinemaProductiondesignInputs03-v1.md  (+6 more)
movie_os/: cli.py  (+3 more)
(+837 files in other folders)
